--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,22 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#8f8de2",
-        "activityBar.background": "#8f8de2",
+        "activityBar.activeBackground": "#edcdee",
+        "activityBar.background": "#edcdee",
         "activityBar.foreground": "#15202b",
         "activityBar.inactiveForeground": "#15202b99",
-        "activityBarBadge.background": "#f2cdcc",
+        "activityBarBadge.background": "#8f8c31",
         "activityBarBadge.foreground": "#15202b",
-        "commandCenter.border": "#e7e7e799",
-        "sash.hoverBorder": "#8f8de2",
-        "statusBar.background": "#6765d7",
-        "statusBar.foreground": "#e7e7e7",
-        "statusBarItem.hoverBackground": "#8f8de2",
-        "statusBarItem.remoteBackground": "#6765d7",
-        "statusBarItem.remoteForeground": "#e7e7e7",
-        "titleBar.activeBackground": "#6765d7",
-        "titleBar.activeForeground": "#e7e7e7",
-        "titleBar.inactiveBackground": "#6765d799",
-        "titleBar.inactiveForeground": "#e7e7e799"
+        "commandCenter.border": "#15202b99",
+        "sash.hoverBorder": "#edcdee",
+        "statusBar.background": "#dfa7e1",
+        "statusBar.foreground": "#15202b",
+        "statusBarItem.hoverBackground": "#d181d4",
+        "statusBarItem.remoteBackground": "#dfa7e1",
+        "statusBarItem.remoteForeground": "#15202b",
+        "titleBar.activeBackground": "#dfa7e1",
+        "titleBar.activeForeground": "#15202b",
+        "titleBar.inactiveBackground": "#dfa7e199",
+        "titleBar.inactiveForeground": "#15202b99"
     },
-    "peacock.color": "#6765d7"
+    "peacock.color": "#dfa7e1"
 }
