--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "description": "Task 61",
   "main": "server.js",
   "scripts": {
+    "install-dependencies": "cd frontend && npm install && cd ../Backend && npm install && cd ..",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node Backend/server.js",
+    "startBack": "node Backend/server.js",
     "server": "nodemon Backend/server.js",
     "client": "npm start --prefix frontend",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+
+    "start": "cd frontend && npm install && cd ../Backend && npm install && cd .. && concurrently \"npm run server\" \"npm run client\""
+
+
   },
   "repository": {
     "type": "git",
