Final (hopefully) commit

--- a/package.json
+++ b/package.json
@@ -10,10 +10,9 @@
     "server": "nodemon Backend/server.js",
     "client": "npm start --prefix frontend",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-
-    "start": "cd frontend && npm install && cd ../Backend && npm install && cd .. && concurrently \"npm run server\" \"npm run client\""
-
-
+    "start2": "cd frontend && npm install && cd ../Backend && npm install && cd .. && concurrently \"npm run server\" \"npm run client\"",
+    
+    "start": "npm install && npm install --prefix frontend && npm install --prefix Backend && concurrently \"npm run server\" \"npm run client\""
   },
   "repository": {
     "type": "git",
